# XMRT-DAO-Ecosystem

./: .vercelignore  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_README.md  N8N_INTEGRATION_README.md  PHASE2_IMPLEMENTATION.md  PHOENIX_PROTOCOL_v3.0_ENHANCEMENTS.md  README.md  VERCEL_DEPLOYMENT.md  agents.md  app.py  app_original_backup.py  docker-compose.dev.yml  docker-compose.n8n.yml  docker-compose.yml  enhanced_app.py  pyproject.toml  requirements-original.txt  requirements-vercel.txt  requirements.txt  test_n8n_integration.py  vercel.json
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/workflows/: ci.yml  security.yml
api/: index.py  requirements.txt
config/: xmrt_config.py
data/: xmrt_knowledgebase.json
docs/: IMPLEMENTATION_PLAN.md  development_summary_aug_2025.md
monitoring/: alert_rules.yml  prometheus.yml
services/: meshnet_service_optimized.py  mining_service_optimized.py
src/: __init__.py
src/agents/: __init__.py  autonomous_decision_engine.py  autonomous_execution_engine.py  autonomous_monitoring_engine.py  eliza_agent.py  eliza_github_enhancement.py
src/api/: meshnet_routes.py  n8n_routes.py
src/core/: __init__.py  orchestrator.py
src/services/: __init__.py  autonomy_service.py  cross_chain_bridge.py  eliza_agent_service.py  enhanced_eliza_agent_service.py  enhanced_memory_service.py  gemini_service.py  github_integration_module.py  github_service.py  governance_service.py  gpt5_orchestrator.py  health_service.py  ip_nft_service.py  memory_service.py  meshnet_service.py  mining_service.py  n8n_service.py  raglight_service.py  (+5 more)
(+5 files in other folders)
